2014-02-17  Daniel Colascione  <dancol@dancol.org>

	* net/dbus.el (dbus-call-method): Work around bug#16775 by having
	dbus-call-method check for completion using a busy-wait loop with
	gradual backoff.

2013-10-02  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.2.9.

	* net/trampver.el: Update release number.

2014-02-16  Dmitry Gutov  <dgutov@yandex.ru>

	* ido.el (ido-file-internal): Don't add the name of an existing
	directory twice.  (Bug#16747)

2014-02-16  Glenn Morris  <rgm@gnu.org>

	* vc/ediff-init.el (ediff-use-faces, ediff-highlight-all-diffs):
	Do not use ediff-defvar-local on pre-defined variables.  (Bug#16744)

2014-02-15  Michael R. Mauger  <michael@mauger.com>

	* progmodes/sql.el: Version 3.4
	(sql-oracle-options): New default value ("-L").
	(sql-mode-oracle-font-lock-keywords): Added placeholder
	highlighting.
	(sql-placeholders-filter): Correct placeholder pattern.
	(sql-read-table-name): Bug fix. Detect absence of SQLi process.
	(sql-login-delay): New variable.
	(sql-product-interactive): Use it.

2014-02-15  Juanma Barranquero  <lekktu@gmail.com>

	* frameset.el (frameset--jump-to-register): Check that buffer is live
	(bug#16749).

2014-02-15  Glenn Morris  <rgm@gnu.org>

	* info.el (info-initialize): Revert 2014-01-10 change.

2014-02-14  Glenn Morris  <rgm@gnu.org>

	* replace.el (map-query-replace-regexp)
	(read-regexp-defaults-function, read-regexp): Doc fixes.

	* dired.el (dired-read-regexp):
	* faces.el (list-faces-display):
	* misearch.el (multi-isearch-read-matching-buffers)
	(multi-isearch-read-matching-files):
	* play/cookie1.el (cookie-apropos):
	* progmodes/grep.el (grep-read-regexp): Doc fixes.

	* textmodes/remember.el (remember): Use frameset-to-register
	rather than frame-configuration-to-register.

2014-02-14  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-menu.el (calc-vectors-menu): Remove menu item for
	incorrect keybinding.

2014-02-13  Daniel Colascione  <dancol@dancol.org>
